# Customer-Churn-End-to-End

./: .gitignore  Customer-Churn-End-to-End  Customer-Churn-End-to-End.ipynb  README.md  app.py  churn_model.pkl  main.py  pyproject.toml  requirements.txt  runtime_config.py  ui_theme.py
backend/: database.py  identifiers.py  main.py  models.py  prediction_service.py  schemas.py  validation.py
pages/: Admin_Dashboard.py
